concord_macros/tests/dsl/fail/fail_secret_in_policy_fmt.stderr
error: secret.* is not allowed in fmt[...]
  --> tests/dsl/fail/fail_secret_in_policy_fmt.rs:13:41
   |
13 |         "token" = fmt["bearer-", secret.api_key]
   |                                         ^^^^^^^

warning: unused import: `concord_core::prelude::*`
 --> tests/dsl/fail/fail_secret_in_policy_fmt.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
